--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>MyName's Homepage</title>
+	<title>Ashley's Homepage</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -18,15 +18,18 @@
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
 <body>
+
+	
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>MyName's Homepage</h1>
+			<h1>Ashley's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<img id ="mrkrabs" src="./img/mrkrabs.png" alt="Mr. Krabs on a good day"/>
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy. Hi, my name is Ashley! Peepee poo poo.
+					<p>Tell us about yourself. Add photos. Customize this. Go crazy. Hi, my name is Ashley! Peepee poo poo. My favorite color is yellow and my favorite cheese is mozzarella.
 					</p>
 			</div>
 
