--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 			<h1>Ashley's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
-					<img id ="mrkrabs" src="./img/mrkrabs.png" alt="Mr. Krabs on a good day"/>
+					<img class="cat-photo" src="./img/cute-grey-kitten.jpg"><br>
+					<a href = "https://en.wikipedia.org/wiki/Cat" target = "_new"> Murray the Cat</a>
+					
 					<h2>About Me</h2>
 					<p>Tell us about yourself. Add photos. Customize this. Go crazy. Hi, my name is Ashley! Peepee poo poo. My favorite color is yellow and my favorite cheese is mozzarella.
+					<img id ="mrkrabs" src="./img/mrkrabs.png" alt="Mr. Krabs on a good day"/>
 					</p>
 			</div>
 
