--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
 			<h1>Ashley's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<a href = "https://en.wikipedia.org/wiki/Cat" target = "_new">
+					<a href = "https://en.wikipedia.org/wiki/Cat" target = "_new">,
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg"><br> </a>
-					
+					<p> Here are the reasons why I love her: </p>
+					<ol>
+						<li>She is a cat</li>
+						<li>She purrs under the blanket</li>
+						<li>She is just a cat</li>
+					</ol>
+
 					<h2>About Me</h2>
 					<p>Tell us about yourself. Add photos. Customize this. Go crazy. Hi, my name is Ashley! Peepee poo poo. My favorite color is yellow and my favorite cheese is mozzarella.
 					<img id ="mrkrabs" src="./img/mrkrabs.png" alt="Mr. Krabs on a good day"/>
