--- a/index.html
+++ b/index.html
@@ -26,19 +26,34 @@
 			<h1>Ashley's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<a href = "https://en.wikipedia.org/wiki/Cat" target = "_new">,
+					<!--<a href = "https://en.wikipedia.org/wiki/Cat" target = "_new">, 
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg"><br> </a>
-					<p> Here are the reasons why I love her: </p>
+					<p> Here are the reasons why I love her: </p> 
 					<ol>
 						<li>She is a cat</li>
 						<li>She purrs under the blanket</li>
 						<li>She is just a cat</li>
-					</ol>
+					</ol> -->
 
-					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy. Hi, my name is Ashley! Peepee poo poo. My favorite color is yellow and my favorite cheese is mozzarella.
-					<img id ="mrkrabs" src="./img/mrkrabs.png" alt="Mr. Krabs on a good day"/>
-					</p>
+					<h2>About Me</h2> -
+					<p>Tell us about yourself. Add photos. Customize this. Go crazy. 
+					Hi, my name is Ashley! Peepee poo poo. </p>
+					<p2>My interest and hobbies!: 
+					<ol><b>MY FAVORITE:</b>
+						<li><b>COLOR:</b> YELLOW</li>
+						<li><b>CHEESE:</b> MOZZARELLA</li>
+						<li><b>SHOW:</b> Modern Family</li>
+					</ol> I am currently a senior and am majoring in Computer Science. This is me!<br>
+					<img id ="my-portrait" src="./img/me.jpg" alt="Me"/> <br>
+					<!--<img id ="mrkrabs" src="./img/mrkrabs.png" alt="Mr. Krabs on a good day"/> -->
+					</p2>
+					<p3>Here are my labs for ART101:
+						<ul><a href="lab2/helloworld.html">Lab 2 HTML & CSS Starter</a></ul>
+						<ul><a href="lab3/index.html">Lab 3 File Structures</a></ul>
+						<ul><a href="lab4/index.html">Lab 4 TBD</a></ul>
+						<ul><a href="lab5/index.html">Lab 5 TBD</a></ul>
+						<ul><a href="lab6/index.html">Lab 6 TBD</a></ul>
+					</p3>
 			</div>
 
 		</section>
