--- a/lab4/index.html
+++ b/lab4/index.html
@@ -26,7 +26,9 @@
 			<h1>Lab X - Subject/Topic</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Restate the challenge of the lab here.The challenge of this lab is to understand how 
+						psuedocode works and how it can be used to code programs.
+					</p>
 			</div>
 
 			<div class="minor-section">
