--- a/lab3/index.html
+++ b/lab3/index.html
@@ -23,25 +23,31 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structure and File Transfer</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The challenge of this lab is to interact with files within various folders. The challenge at hand involves task such as link files within HTML documents, connecting ilfes to access additional files, and uploading images to our websites.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Some problems that occured was that I would have small syntax error that I wouldn't notice until I saved my code and refreshed the webpage. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>This assignment went well. The steps were clear and I didn't run into any obstacles. The assignment document was clear on 
+						what was expected so I was able to complete the assignment with ease.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
+					<p>Here is my index.html for my Lab 3!
+						<img id ="lab3" src="./img/lab3.png" alt="Lab 3"/> <br>
+						<img id="lab3browser" src="./img/lab3html.png" alt="Lab 3 HTML"/> <br>
+					</p>
 			</div>
 		</section>
 		<nav id="links">
