--- a/lab4/index.html
+++ b/lab4/index.html
@@ -26,19 +26,24 @@
 			<h1>Lab X - Subject/Topic</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.The challenge of this lab is to understand how 
+					<p>The challenge of this lab is to understand how 
 						psuedocode works and how it can be used to code programs.
+						By learning how to write psuedocode, it will help us get in the 
+						habit of thinking in terms before jumping into coding.
 					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Some problems that we had were deciding what task was important 
+						enough to document as psuedocode and also how to simplify it in a coding perspective. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>I enjoyed this assignment because it forced me to be
+						creative in my psuedocode and think about how I would code it. It was also fun because I actually didn't have
+						to hard code! </p>
 			</div>
 
 			<div class="minor-section">
