--- a/lab2/index.html
+++ b/lab2/index.html
@@ -26,17 +26,23 @@
 			<h1>Lab 2 - </h1>HTML & CSS Starter
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The challenge of this lab was practice psuedocode and create high level task. By learning how to write
+						psuedocode, it will help us get in the habit of thinking in terms before jumping into coding.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Some problems that we had were deciding what task was important 
+						enough to document as psuedocode and also how to simplify it in a coding perspective. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>I enjoyed this assignment because it forced me to be
+						creative in my psuedocode and think about how I would code it. It was also fun because I actually didn't have
+						to hard code!
+					</p>
 			</div>
 
 			<div class="minor-section">
