--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,15 +23,24 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<img class = "car" src ="img/tesla.jpg" alt="Tesley the 5 year old Tesla"
+			width = "300"
+			length = "300">
+			<h1>Lab 5 - Data Type and Variables</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Restate the challenge of the lab here. The challenge of this lab was to learn and practice 
+						data type and variables in Javascript.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>What problems arose? How did you solve them? One of the small problems that I ran into was forgetting
+						to include a semi colon (;) after initializing the variables in javascript. The Javascript console kept
+						returning unidentified after I would try to, however, I quickly figured it out. I was just used to python
+						and would forget to add the semi colon at the end of each line.
+					</p>
 			</div>
 
 			<div class="minor-section">
@@ -41,7 +50,13 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<h3>Script Output</h3>
+					<script type="text/javascript" src="./js/lab.js"></script>
+
+					<div id="output">
+						<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
+						<!-- <script type="text/javascript" src="./js/lab.js"></script> -->
+					</div>
 			</div>
 		</section>
 		<nav id="links">
