--- a/lab5/index.html
+++ b/lab5/index.html
@@ -51,10 +51,10 @@
 			<div class="minor-section">
 					<h2>Results</h2>
 					<h3>Script Output</h3>
-					<script type="text/javascript" src="./js/lab.js"></script>
+						<script type="text/javascript" src="./js/lab.js"></script>
 
 					<div id="output">
-						<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
+						<script type="text/javascript" src="./js/lab.js" DEFER></script>
 						<!-- <script type="text/javascript" src="./js/lab.js"></script> -->
 					</div>
 			</div>
