lab 5 & fixing homepage

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 					<p3>Here are my labs for ART101:
 						<ul><a href="lab2/helloworld.html">Lab 2 HTML & CSS Starter</a></ul>
 						<ul><a href="lab3/index.html">Lab 3 File Structures</a></ul>
-						<ul><a href="lab4/index.html">Lab 4 TBD</a></ul>
-						<ul><a href="lab5/index.html">Lab 5 TBD</a></ul>
+						<ul><a href="lab4/index.html">Lab 4 Psuedocode and Problem Solving</a></ul>
+						<ul><a href="lab5/index.html">Lab 5 Data Types and Variables</a></ul>
 						<ul><a href="lab6/index.html">Lab 6 TBD</a></ul>
 					</p3>
 			</div>
