--- a/lab4/index.html
+++ b/lab4/index.html
@@ -23,7 +23,7 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 4- Psuedocode and Problem-Solving</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>The challenge of this lab is to understand how 
