--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+    <!-- This title is used for tabs and bookmarks -->
+    <title>Lab 5 - Data Types and Variables</title>
 
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+    <!-- Use UTF character set, a good idea with any webpage -->
+      <meta charset="UTF-8" />
+    <!-- Set viewport so page remains consistently scaled w narrow devices -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Include a sitewide CSS file for consistent styling across the site -->
+    <link rel="stylesheet" type="text/css" href="../css/site.css">
+    <!-- Lab-specifc CSS file for any special styling of this particular page -->
+    <link rel="stylesheet" type="text/css" href="css/lab.css">
+    
+    <!-- load jQuery library to make javascript easier (must be above our lab js)-->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- Link to javascript file - DEFER waits until all elements are rendered -->
+    <script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
+    <!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
+    <main id="content">
+        <section>
+            <img class = "car" src ="img/tesla.jpg" alt="Tesley the 5 year old Tesla"
+            width = "300"
+            length = "300">
+            <h1>Lab 5 - Data Type and Variables</h1>
+            <div class="minor-section">
+                    <h2>Challenge</h2>
+                    <p>Restate the challenge of the lab here. The challenge of this lab was to learn and practice 
+                        data type and variables in Javascript.
+                    </p>
+            </div>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
+            <div class="minor-section">
+                    <h2>Problems</h2>
+                    <p>What problems arose? How did you solve them? One of the small problems that I ran into was forgetting
+                        to include a semi colon (;) after initializing the variables in javascript. The Javascript console kept
+                        returning unidentified after I would try to, however, I quickly figured it out. I was just used to python
+                        and would forget to add the semi colon at the end of each line.
+                    </p>
+            </div>
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
+            <div class="minor-section">
+                    <h2>Reflection</h2>
+                    <p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? 
+						This assignment was like a breathe of fresh air for me. I am taking 3 different programming classes right now and they are in three different
+						langauges. While I was initializing the variables, I assumed it was going to be the easiest part of the lab, however
+						I made a slight error which caused my Javascript code not to show up on my website. After 3 days of pondering, I finally
+						realized that it was a missing quotation mark which is a very simple mistake. After finding out what the problem was, 
+						I just had a moment of realization and laughed at myself. 
+					</p>
+            </div>
 
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
+            <div class="minor-section">
+                    <h2>Results</h2>
+                    <h3>Script Output</h3>
+                    <div id="output">
+						<script type="text/javascript" src="./js/lab.js"></script>
+                    </div>
+            </div>
+        </section>
+        <nav id="links">
+        </nav>
+    </main>
 </body>
 </html>
