--- a/lab7/index.html
+++ b/lab7/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 7 - Functions</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,20 +23,27 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 7 - Functions</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The challenge of this lab was to create a function that 
+						ask for a user input to manipulate it. After obtaining the user input, we are tasked with turning
+						the input (which should be a string) into an array. When it is an array, we have to sort it to 
+						alphabetize it and display it back to the user on our website.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p> Some problems that came up was just not knowing what functions JavaScript already has. 
+						I had to do some research on which function I can call to perform the task we wanted it to.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>This assignment went pretty well because we went over it during class and also there are many great examples of
+						JavaScript functions and how to use them on the internet.</p>
 			</div>
 
 			<div class="minor-section">
