--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                         <ul><a href="lab3/index.html">Lab 3 File Structures</a></ul>
                         <ul><a href="lab4/index.html">Lab 4 Psuedocode and Problem Solving</a></ul>
                         <ul><a href="lab5/index.html">Lab 5 Data Types and Variables</a></ul>
-                        <ul><a href="lab6/index.html">Lab 6 TBD</a></ul>
+                        <ul><a href="lab6/index.html">Lab 6 Arrays and Objects</a></ul>
+                        <ul><a href="lab7/index.html">Lab 7 Functions</a></ul>
                     </p3>
             </div>
 
