--- a/lab5/index.html
+++ b/lab5/index.html
@@ -63,6 +63,8 @@
             </div>
         </section>
         <nav id="links">
+            <!-- Put links to other pages (including the homepage) here. -->
+			<ul><a href="https://fatley.github.io/art101/">Lab 2 HTML & CSS Starter</a></ul>
         </nav>
     </main>
 </body>
