--- a/lab9/index.html
+++ b/lab9/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 8 - Anon Functions and Callbacks</title>
+	<title>Lab 9 - Libraries & jQuery</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,35 +23,27 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 8 - Anon Functions and Callbacks</h1>
+			<h1>Lab 9 - Libraries & jQuery</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>The challenge of this lab was to create a function that does a math equation with one parameter, 'x'.
-						After that, we are going to create an array of numbers to use the map() function to alter our array. 
-						After that, we create another function to play with the array.
+					<p> <button class ="challenge">CLick me to read challenges!!</button>
 					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p> Some problems that came up was just not knowing what functions JavaScript already has. 
-						I had to do some research on which function I can call to perform the task we wanted it to.
+					<p> <button class ="problem">Click me to read problems!!</button> 
 					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>This assignment went pretty well because we went over it during class and also there are many great examples of
-						JavaScript functions and how to use them on the internet.</p>
+					<p><button class = "reflection">Click me to read the reflections!</button></p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id ="output">
-						<p>the array, the square root, and squared:</p>
-						<p id="array"></p>
-						<p id="squareRoot"></p>
-						<p id="squared"></p>
 					</div>
 			</div>
 		</section>
