--- a/lab11/index.html
+++ b/lab11/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 10 - JavaScript for the Web</title>
+	<title>Lab 11 - JavaScript Event and Forms</title>
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
@@ -38,9 +38,11 @@
 
 			<div id="output">
 					<h2>Results</h2>
-					<p> Press the button below to start the conversation!
-					</p>
-					<button id="make-convo">Say Something</button>
+					<input  type="text" id="user-name" placeholder="Input your name">
+					<button id="submit">Submit</button>
+					<input	type="text" id="user-anagram" placeholder="Input a random word">
+					<button id="anagram">Anagram</button>
+					<div id = "output-anagram"></div>
 			</div>
 		</section>
 	</main>
@@ -51,3 +53,5 @@
 	
 </body>
 </html>
+
+
