--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                         <ul><a href="lab5/index.html">Lab 5 Data Types and Variables</a></ul>
                         <ul><a href="lab6/index.html">Lab 6 Arrays and Objects</a></ul>
                         <ul><a href="lab7/index.html">Lab 7 Functions</a></ul>
+                        <ul><a href="lab8/index.html">Lab 8 Conditionals</a></ul>
+                        <ul><a href="lab9/index.html">Lab 9 Loops</a></ul>
+                        <ul><a href="lab10/index.html">Lab 10 JavaScript for the Web</a></ul>
+                        <ul><a href="lab11/index.html">Lab 11 JavaScript Events and Forms</a></ul>
+                        <ul><a href="Team Project/index.html">Team Project</a></ul>
                     </p3>
             </div>
 
