team project lab 14

--- a/Team Project/index.html
+++ b/Team Project/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 11 - JavaScript Event and Forms</title>
+	<title>Team Project - Music Map</title>
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
@@ -31,7 +31,7 @@
 		<section>
 			<!-- map creation -->
 			<h1>Music Map</h1>
-			<div id="mapid" style="height: 600px;">
+			<div id="mapid" style="height: 900px;">
 			</div>
 		</section>
 	</main>
