--- a/Team Project/index.html
+++ b/Team Project/index.html
@@ -26,8 +26,19 @@
 </head>
 
 <body>
+	<div id="myModal" class ="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<h2>Welcome to our Music Map!</h2>
+			<p> This is our welcome message.</p>
+		</div>
+	</div>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
+		<div id = "popup" style="display: none;">
+			<h2>Welcome to Our Music Map!</h2>
+			<P> This is our welcome message.</P>
+		</div>
 		<section>
 			<!-- map creation -->
 			<h1>Music Map</h1>
