--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                         <ul><a href="lab10/index.html">Lab 10 JavaScript for the Web</a></ul>
                         <ul><a href="lab11/index.html">Lab 11 JavaScript Events and Forms</a></ul>
                         <ul><a href="lab13/index.html">Lab 13 Loops</a></ul>
+                        <ul><a href="lab14/index.html">Lab 14 Debugging</a></ul>
+                        <ul><a href="lab15/index.html">Lab 15 Ajax</a></ul>
                         <ul><a href="Team Project/index.html">Team Project</a></ul>
                     </p3>
             </div>
