--- a/Team Project/index.html
+++ b/Team Project/index.html
@@ -22,27 +22,23 @@
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
 	<script src="https://sdk.scdn.co/spotify-player.js"></script>
-
+	<!--https://charts.spotify.com/charts/overview/global#City-->
 </head>
 
 <body>
-	<div id="myModal" class ="modal">
-		<div class="modal-content">
-			<span class="close">&times;</span>
-			<h2>Welcome to our Music Map!</h2>
-			<p> This is our welcome message.</p>
-		</div>
-	</div>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
-		<div id = "popup" style="display: none;">
-			<h2>Welcome to Our Music Map!</h2>
-			<P> This is our welcome message.</P>
-		</div>
 		<section>
+			<div id ="myModal" class = "modal">
+				<div class = "modal-content">
+					<span class = "close">&times;</span>
+					<h2>Welcome to our Music Map!</h2>
+					<p>Hi, welcome to our interactive music map! Music can hold an abundance of knowledge and culture, it’s also a powerful tool for building community. We aim to foster an openness to new experiences through music. Scroll down and discover the top songs from around the world! </p>
+				</div>
+			</div>
 			<!-- map creation -->
 			<h1>Music Map</h1>
-			<div id="mapid" style="height: 900px;">
+			<div id="mapid" style="width: 100%; height: 100vh;"></div>
 			</div>
 		</section>
 	</main>
