--- a/Team Project/index.html
+++ b/Team Project/index.html
@@ -33,7 +33,7 @@
 				<div class = "modal-content">
 					<span class = "close">&times;</span>
 					<h2>Welcome to our Music Map!</h2>
-					<p>Hi, welcome to our interactive music map! Music can hold an abundance of knowledge and culture, it’s also a powerful tool for building community. We aim to foster an openness to new experiences through music. Scroll down and discover the top songs from around the world! </p>
+					<p>Hi, welcome to our interactive music map! Music can hold an abundance of knowledge and culture, it’s also a powerful tool for building community. We aim to foster an openness to new experiences through music. Close this popup and discover the top songs from around the world! </p>
 				</div>
 			</div>
 			<!-- map creation -->
